--- a/curso_flutter/expenses/pubspec.yaml
+++ b/curso_flutter/expenses/pubspec.yaml
@@ -31,7 +31,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
